# com

./: .gitignore  COM_API_Documentation.html  GUI_README.md  Makefile  WEBSOCKET_TESTING_README.md  advanced_features.py  advanced_order_gui.py  alembic.ini  check_redis.py  debug_exit_plan.py  fix_sqlalchemy.py  fix_sqlalchemy_python313.py  generate_keys.py  launch_gui.py  main.py  order_gui.py  performance_test.py  pyproject.toml  quick_generate_keys.py  quick_performance_test.py  requirements.txt  setup_environment.py  setup_vps.py  simple_debug.py  start_com_system.py  test_auth.py  test_com_backend.py  test_com_complete.py  test_com_tp_sl.py  test_hmac_verification.py  test_mexc_tp_sl_monitor.py  test_order_logging.py  test_order_monitoring.py  test_position.py  test_sqlite_connection.py  test_tp_external_oid.py  test_trigger_events.py  test_websocket_algo_monitoring.py  test_websocket_capture.py  test_websocket_complete.py  (+3 more)
com/app/: __init__.py  main.py
com/app/adapters/: __init__.py  base.py  manager.py  mexc.py
com/app/api/v1/: balances.py  events.py  orders.py  positions.py  router.py  websocket.py
com/app/config/: __init__.py  brokers.py  settings.py
com/app/core/: database.py  logging.py  redis.py
com/app/schemas/: __init__.py  balances.py  base.py  events.py  orders.py  positions.py
com/app/security/: auth.py
com/app/services/: __init__.py  balance_tracker.py  data_logger.py  error_logger.py  events.py  gui_data_service.py  mexc_market_data.py  order_monitor.py  orders.py  position_tracker.py
com/app/storage/: idempotency.py
com/app/ws/: __init__.py  hub.py
com/config/brokers/: mexc.yaml
config/brokers/: __init__.py  example_currency.yaml  example_tokens.yaml  mexc.yaml
mexc_python/: demo.py
mexc_python/mexcpy/: api.py
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_add_secret_key_column.py
